# tricorder

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  index.html  index.xml  sitemap.xml
.github/workflows/: deploy-site.yml
categories/: index.xml
css/: style.css
examples/: inventory.toml
src/: cli.rs  host.rs  inventory.rs  lib.rs  main.rs
src/cli/: download.rs  exec.rs  external.rs  info.rs  mod.rs  module.rs  upload.rs
src/core/: error.rs  host.rs  inventory.rs  mod.rs  tags.rs
src/prelude/: error.rs  host.rs  inventory.rs  mod.rs  tags.rs
src/prelude/inventory/: host_entry.rs  host_id.rs  host_registry.rs  host_tag.rs  mod.rs  tag_expr.rs
src/prelude/tasks/: host_connect.rs  mod.rs  task.rs  task_runner.rs
src/tasks/: download.rs  exec.rs  info.rs  mod.rs  module.rs  upload.rs
tags/: index.xml
tests/: common.rs  run_integration_tests.sh  setup_ssh.sh  setup_tricorder.sh
tests/all/: main.rs
tests/all/prelude/: host_test.rs  inventory_test.rs  mod.rs
tests/all/tasks/: common.rs  exec_test.rs  mod.rs
tests/core/: inventory_test.rs
tests/prelude/: inventory_test.rs
tutorials/: index.html  index.xml
tutorials/cicd/: index.html
tutorials/cli/: index.html
tutorials/getting-started/: index.html
tutorials/inventory/: index.html
tutorials/setup-auth/: index.html
www/: .gitignore  config.toml  package.json  tailwind.config.js
www/content/: _index.md
www/content/tutorials/: _index.md  cicd.md  cli.md  getting-started.md  inventory.md  setup-auth.md
www/layouts/_default/: baseof.html  section.html
www/styles/: main.css
(+12 files in other folders)
