[package]
name = "tricorder"
version = "0.7.0"

description = "Automation, the KISS way, no YAML involved."
keywords = ["automation", "ssh"]
categories = ["command-line-utilities"]

homepage = "https://github.com/linkdd/tricorder"
repository = "https://github.com/linkdd/tricorder"

license = "MIT"
readme = "README.md"

exclude = ["examples/"]

edition = "2021"

[dependencies]

toml = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "1.5"

rayon = "1.5"

clap = { version = "3.1", features = ["cargo"] }
ssh2 = "0.9"
is_executable = "1.0"
shell-words = "1.1"
file-mode = "0.1"
tinytemplate = "1.2"
